--- a/styles.css
+++ b/styles.css
@@ -217,3 +217,102 @@ ul li a:hover{
     color: #CF0711;
 }
 
+/* style pour la deuxieme section */
+
+.destination .titre{
+    font-size:  30px;
+}
+
+.desc-boutton{
+    display: flex;
+    justify-content: space-between;
+    margin: 30px 0;
+}
+
+.desc-boutton .bouttons button{
+    background-color: #F6D238;
+    border: 0;
+    cursor: pointer;
+    border: 2px solid #F6D238;
+    height: 50px;
+    width: 50px;
+    border-radius: 50%;
+    transition: 0.5s;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    color: #000;
+}
+
+.desc-boutton .bouttons button:hover{
+    background-color: #f1f1f1;
+    transform: rotate(10deg);
+}
+
+.seconde{
+    margin-left: 20px;
+}
+
+.desc-boutton .bouttons button i{
+    font-size: 25px;
+}
+
+.destinations .small-desc{
+    color: #999;
+    width: 50%;
+    font-size: 14px;
+}
+
+.destinations .galerie .images{
+    width: 218px;
+    height: 350px;
+    border-radius: 1rem;
+    box-shadow: 5px 5px 30px rgba(0, 0, 0, 0.1);
+    overflow: hidden;
+    position: relative;
+    cursor: pointer;
+    background-color: #fff;
+    padding: 20px;
+}
+
+.destinations .galerie .images img{
+    object-fit: cover;
+    height: 100%;
+    width: 100%;
+    border-radius: 1rem;
+    transition: 0.5s;
+}
+
+.destinations .galerie{
+    display: flex;
+    justify-content: space-between;  
+}
+.destinations .galerie  .description{
+    transform: translateY(350px);
+    background: #fff;
+    padding: 20px;
+    text-align: center;
+    transition: 0.5s;
+
+}
+
+.destinations .galerie  .images .description h1{
+    font-size: 20px;
+    margin-bottom: 10px;
+}
+
+.destinations .galerie .images .description p{
+    font-size: 14px;
+    color: #999;
+}
+
+.destinations .galerie .images:hover .description{
+    transform: translateY(-120px);
+}
+
+.destinations .galerie .images:hover img{
+    transform: translateY(-120px);
+} 
+
+/* style pour la troisieme section  */
+
