--- a/styles.css
+++ b/styles.css
@@ -337,3 +337,76 @@ ul li a:hover{
     overflow: hidden;
     box-shadow: 5px 5px 30px rgba(0, 0, 0, 0.1);
 }
+
+.box-list .box img{
+    height : 100%;
+    width: 100%;
+    object-fit: cover;
+    transition: 0.5s;
+}
+.box-list .box:hover img{
+    transform: scale(2) rotate(10deg);
+}
+
+.box-list .box .description{
+    position: absolute;
+    bottom: 0;
+    background-color: #fff;
+    padding: 20px;
+    width: 100%;
+    transition: 0.5s;
+}
+
+.box-list .box .description h2{
+    font-size: 16px;
+    font-weight: 500;
+}
+.rating{
+    color: #dca930;
+    margin-top: 5px;
+    font-weight: bold;
+}
+
+.box-list .box .description .button-description{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.box-list .box .description .button-description span{
+    font-size: 15px;
+}
+
+.box-list .box .description .button-description button{
+    padding: 10px 20px;
+    background-color: transparent;
+    border: 1px solid #F6D238;
+    color:#F6D238;
+    border-radius: 20px;
+    cursor: pointer;
+    transition: 0.5s;
+}
+
+.box-list .box .description .button-description button:hover{
+    background-color: #F6D238;
+    color:#000;
+}
+
+.best .titre{
+    text-align:  center;
+    font-size: 30px;
+}
+
+.best .small-desc{
+    text-align: center;
+    margin: 30px auto;
+    color: #999;
+    font-size: 14px;
+}
+
+.view-all{
+    margin: 50px 0;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
