Ajout du footer

--- a/styles.css
+++ b/styles.css
@@ -412,7 +412,7 @@ ul li a:hover{
 }
 
 
-/* style pour l'email subscription section */
+/* style pour la quatrieme section */
 
 .email h1{
     margin-bottom: 20px;
@@ -448,3 +448,4 @@ ul li a:hover{
     width: 400px;
     outline: none;
 }
+
