Ajout du style sur le footer

--- a/styles.css
+++ b/styles.css
@@ -449,3 +449,24 @@ ul li a:hover{
     outline: none;
 }
 
+/* style pour le footer */
+
+footer{
+    background-color: #f1f1f1;
+    border-radius: 60px 60px 0 0;
+    padding: 20px 0;
+    text-align: center;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+}
+
+footer .right-footer{
+    color: #999;
+    font-size: 14px;
+}
+
+footer .right-footer span{
+    color: #F6D238;
+}
